[gd_scene load_steps=18 format=2]

[ext_resource path="res://Fonts/slkscr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/slkscrb.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/menu_button.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Menu/Items.gd" type="Script" id=4]
[ext_resource path="res://Sounds/appear.wav" type="AudioStream" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.509677 )
colors = PoolColorArray( 1, 0, 0, 0.439216 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 640

[sub_resource type="Animation" id=3]
resource_name = "Flash Animation"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture:gradient:colors")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ PoolColorArray( 1, 0, 0, 0.439216 ), PoolColorArray( 1, 0, 0, 0.72549 ), PoolColorArray( 1, 0, 0, 0.439216 ), PoolColorArray( 1, 0, 0, 0.72549 ), PoolColorArray( 1, 0, 0, 0.439216 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.690196, 0.690196, 0.690196, 1 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=12]
size = 24
font_data = ExtResource( 2 )

[node name="Items" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 320, 256 )
scale = Vector2( 1, 32 )
texture = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
"anims/Flash Animation" = SubResource( 3 )

[node name="uibeep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 2.0
bus = "SFX"

[node name="NavTween" type="Tween" parent="."]

[node name="FlyOutTween" type="Tween" parent="."]
playback_speed = 1.5
playback/speed = 1.5

[node name="FlyInTween" type="Tween" parent="."]
playback_speed = 1.5
playback/speed = 1.5

[node name="MainItems" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Control" type="Control" parent="MainItems"]
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainItems/Control"]
anchor_bottom = 1.0
margin_right = 640.0
margin_bottom = 384.0
mouse_filter = 2
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playbutton" type="Button" parent="MainItems/Control/VBoxContainer"]
margin_right = 640.0
margin_bottom = 31.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Play"
flat = true
align = 0

[node name="optionsbutton" type="Button" parent="MainItems/Control/VBoxContainer"]
margin_top = 33.0
margin_right = 640.0
margin_bottom = 64.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Options"
flat = true
align = 0

[node name="quitbutton" type="Button" parent="MainItems/Control/VBoxContainer"]
margin_top = 66.0
margin_right = 640.0
margin_bottom = 97.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Quit"
flat = true
align = 0

[node name="PlayItems" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Control" type="Control" parent="PlayItems"]
anchor_bottom = 1.0
margin_left = 640.0
margin_right = 640.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayItems/Control"]
anchor_bottom = 1.0
margin_right = 640.0
margin_bottom = 384.0
mouse_filter = 2
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="classicbutton" type="Button" parent="PlayItems/Control/VBoxContainer"]
margin_right = 640.0
margin_bottom = 31.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Classic"
flat = true
align = 0

[node name="survivalbutton" type="Button" parent="PlayItems/Control/VBoxContainer"]
margin_top = 33.0
margin_right = 640.0
margin_bottom = 64.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Survival"
flat = true
align = 0

[node name="extremebutton" type="Button" parent="PlayItems/Control/VBoxContainer"]
margin_top = 66.0
margin_right = 640.0
margin_bottom = 97.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Extreme"
flat = true
align = 0

[node name="OptionsItems" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Control" type="Control" parent="OptionsItems"]
anchor_bottom = 1.0
margin_left = 640.0
margin_right = 640.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsItems/Control"]
anchor_bottom = 1.0
margin_top = 4.0
margin_right = 640.0
margin_bottom = 384.0
mouse_filter = 2
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mastervolume" type="HBoxContainer" parent="OptionsItems/Control/VBoxContainer"]
margin_right = 640.0
margin_bottom = 25.0

[node name="label" type="Label" parent="OptionsItems/Control/VBoxContainer/mastervolume"]
margin_right = 212.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 5 )
text = "Master Volume"

[node name="VSeparator" type="VSeparator" parent="OptionsItems/Control/VBoxContainer/mastervolume"]
margin_left = 216.0
margin_right = 380.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="OptionsItems/Control/VBoxContainer/mastervolume"]
margin_left = 384.0
margin_right = 640.0
margin_bottom = 25.0
grow_horizontal = 0
rect_min_size = Vector2( 256, 0 )

[node name="ProgressBar" type="ProgressBar" parent="OptionsItems/Control/VBoxContainer/mastervolume/MarginContainer"]
margin_right = 256.0
margin_bottom = 25.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
min_value = -32.0
max_value = 0.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfxvolume" type="HBoxContainer" parent="OptionsItems/Control/VBoxContainer"]
margin_top = 33.0
margin_right = 640.0
margin_bottom = 58.0

[node name="label" type="Label" parent="OptionsItems/Control/VBoxContainer/sfxvolume"]
margin_right = 201.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 5 )
text = "Sound Volume"

[node name="VSeparator" type="VSeparator" parent="OptionsItems/Control/VBoxContainer/sfxvolume"]
margin_left = 205.0
margin_right = 380.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="OptionsItems/Control/VBoxContainer/sfxvolume"]
margin_left = 384.0
margin_right = 640.0
margin_bottom = 25.0
grow_horizontal = 0
rect_min_size = Vector2( 256, 0 )

[node name="ProgressBar" type="ProgressBar" parent="OptionsItems/Control/VBoxContainer/sfxvolume/MarginContainer"]
margin_right = 256.0
margin_bottom = 25.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
min_value = -32.0
max_value = 0.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="musicvolume" type="HBoxContainer" parent="OptionsItems/Control/VBoxContainer"]
margin_top = 66.0
margin_right = 640.0
margin_bottom = 91.0

[node name="label" type="Label" parent="OptionsItems/Control/VBoxContainer/musicvolume"]
margin_right = 193.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 5 )
text = "Music Volume"

[node name="VSeparator" type="VSeparator" parent="OptionsItems/Control/VBoxContainer/musicvolume"]
margin_left = 197.0
margin_right = 380.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="OptionsItems/Control/VBoxContainer/musicvolume"]
margin_left = 384.0
margin_right = 640.0
margin_bottom = 25.0
grow_horizontal = 0
rect_min_size = Vector2( 256, 0 )

[node name="ProgressBar" type="ProgressBar" parent="OptionsItems/Control/VBoxContainer/musicvolume/MarginContainer"]
margin_right = 256.0
margin_bottom = 25.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
min_value = -32.0
max_value = 0.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="keysbutton" type="Button" parent="OptionsItems/Control/VBoxContainer"]
margin_top = 99.0
margin_right = 640.0
margin_bottom = 130.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Set Keys"
flat = true
align = 0

[node name="KeysItems" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Control" type="Control" parent="KeysItems"]
anchor_bottom = 1.0
margin_left = 640.0
margin_right = 640.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="KeysItems/Control"]
anchor_bottom = 1.0
margin_top = 4.0
margin_right = 640.0
margin_bottom = 384.0
mouse_filter = 2
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuleft" type="HBoxContainer" parent="KeysItems/Control/VBoxContainer"]
margin_right = 640.0
margin_bottom = 25.0

[node name="actionlabel" type="Label" parent="KeysItems/Control/VBoxContainer/menuleft"]
margin_right = 230.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 10 )
text = "Menu Left / Left"

[node name="VSeparator" type="VSeparator" parent="KeysItems/Control/VBoxContainer/menuleft"]
margin_left = 234.0
margin_right = 576.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 11 )

[node name="keylabel" type="Label" parent="KeysItems/Control/VBoxContainer/menuleft"]
margin_left = 580.0
margin_right = 640.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 12 )
text = "Key"

[node name="menuright" type="HBoxContainer" parent="KeysItems/Control/VBoxContainer"]
margin_top = 33.0
margin_right = 640.0
margin_bottom = 58.0

[node name="actionlabel" type="Label" parent="KeysItems/Control/VBoxContainer/menuright"]
margin_right = 266.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 10 )
text = "Menu Right / Right"

[node name="VSeparator" type="VSeparator" parent="KeysItems/Control/VBoxContainer/menuright"]
margin_left = 270.0
margin_right = 576.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 11 )

[node name="keylabel" type="Label" parent="KeysItems/Control/VBoxContainer/menuright"]
margin_left = 580.0
margin_right = 640.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 12 )
text = "Key"

[node name="menuup" type="HBoxContainer" parent="KeysItems/Control/VBoxContainer"]
margin_top = 66.0
margin_right = 640.0
margin_bottom = 91.0

[node name="actionlabel" type="Label" parent="KeysItems/Control/VBoxContainer/menuup"]
margin_right = 116.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 10 )
text = "Menu Up"

[node name="VSeparator" type="VSeparator" parent="KeysItems/Control/VBoxContainer/menuup"]
margin_left = 120.0
margin_right = 576.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 11 )

[node name="keylabel" type="Label" parent="KeysItems/Control/VBoxContainer/menuup"]
margin_left = 580.0
margin_right = 640.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 12 )
text = "Key"

[node name="menudown" type="HBoxContainer" parent="KeysItems/Control/VBoxContainer"]
margin_top = 99.0
margin_right = 640.0
margin_bottom = 124.0

[node name="actionlabel" type="Label" parent="KeysItems/Control/VBoxContainer/menudown"]
margin_right = 324.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 10 )
text = "Menu Down / Fast Fall"

[node name="VSeparator" type="VSeparator" parent="KeysItems/Control/VBoxContainer/menudown"]
margin_left = 328.0
margin_right = 576.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 11 )

[node name="keylabel" type="Label" parent="KeysItems/Control/VBoxContainer/menudown"]
margin_left = 580.0
margin_right = 640.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 12 )
text = "Key"

[node name="jump" type="HBoxContainer" parent="KeysItems/Control/VBoxContainer"]
margin_top = 132.0
margin_right = 640.0
margin_bottom = 157.0

[node name="actionlabel" type="Label" parent="KeysItems/Control/VBoxContainer/jump"]
margin_right = 71.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 10 )
text = "Jump"

[node name="VSeparator" type="VSeparator" parent="KeysItems/Control/VBoxContainer/jump"]
margin_left = 75.0
margin_right = 576.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 11 )

[node name="keylabel" type="Label" parent="KeysItems/Control/VBoxContainer/jump"]
margin_left = 580.0
margin_right = 640.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 12 )
text = "Key"

[node name="backpause" type="HBoxContainer" parent="KeysItems/Control/VBoxContainer"]
margin_top = 165.0
margin_right = 640.0
margin_bottom = 190.0

[node name="actionlabel" type="Label" parent="KeysItems/Control/VBoxContainer/backpause"]
margin_right = 186.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 10 )
text = "Back / Pause"

[node name="VSeparator" type="VSeparator" parent="KeysItems/Control/VBoxContainer/backpause"]
margin_left = 190.0
margin_right = 576.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 11 )

[node name="keylabel" type="Label" parent="KeysItems/Control/VBoxContainer/backpause"]
margin_left = 580.0
margin_right = 640.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 12 )
text = "Key"

[node name="select" type="HBoxContainer" parent="KeysItems/Control/VBoxContainer"]
margin_top = 198.0
margin_right = 640.0
margin_bottom = 223.0

[node name="actionlabel" type="Label" parent="KeysItems/Control/VBoxContainer/select"]
margin_right = 90.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 10 )
text = "Select"

[node name="VSeparator" type="VSeparator" parent="KeysItems/Control/VBoxContainer/select"]
margin_left = 94.0
margin_right = 576.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 11 )

[node name="keylabel" type="Label" parent="KeysItems/Control/VBoxContainer/select"]
margin_left = 580.0
margin_right = 640.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 12 )
text = "Key"

[node name="restart" type="HBoxContainer" parent="KeysItems/Control/VBoxContainer"]
margin_top = 231.0
margin_right = 640.0
margin_bottom = 256.0

[node name="actionlabel" type="Label" parent="KeysItems/Control/VBoxContainer/restart"]
margin_right = 110.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 10 )
text = "Restart"

[node name="VSeparator" type="VSeparator" parent="KeysItems/Control/VBoxContainer/restart"]
margin_left = 114.0
margin_right = 576.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 11 )

[node name="keylabel" type="Label" parent="KeysItems/Control/VBoxContainer/restart"]
margin_left = 580.0
margin_right = 640.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 12 )
text = "Key"
